change body of msg and webhook url

--- a/conf/mod_muc_offline_post.yml
+++ b/conf/mod_muc_offline_post.yml
@@ -2,4 +2,4 @@
 
 modules:
   mod_muc_offline_post:
-    post_url: https://localhost:443/api/chat/notifications/webhook
+    post_url: https://api-dev.sendhelper.com/api/chat/notifications/webhook
